внесла изменения в файл pom.xml

--- a/project/pom.xml
+++ b/project/pom.xml
@@ -3,4 +3,13 @@
   <groupId>project</groupId>
   <artifactId>project</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  
+  <packaging>pom</packaging>
+  
+  <modules>
+   <module>bot</module>
+   <module>link-parser</module>
+   <module>scrapper</module>
+  </modules>
+  
 </project>
