--- a/project/pom.xml
+++ b/project/pom.xml
@@ -6,10 +6,78 @@
   
   <packaging>pom</packaging>
   
+  <dependencies>
+  	<dependency>
+  		<groupId>org.jetbrains</groupId>
+  		<artifactId>annotations</artifactId>
+  		<version>23.1.0</version>
+  		<scope>compile</scope>
+  	</dependency>
+  </dependencies>
+
+  
   <modules>
    <module>bot</module>
    <module>link-parser</module>
    <module>scrapper</module>
   </modules>
+  
+  <dependencyManagement>
+  	<dependencies>
+  		<dependency>
+  			<groupId>org.springframework.cloud</groupId>
+  			<artifactId>spring-cloud-dependencies</artifactId>
+  			<version>2022.0.0</version>
+  			<type>pom</type>
+  			<scope>import</scope>
+  		</dependency>
+  		<dependency>
+  			<groupId>org.springframework.boot</groupId>
+  			<artifactId>spring-boot-dependencies</artifactId>
+  			<version>3.0.1</version>
+ 			<type>pom</type>
+  			<scope>import</scope>
+		</dependency>
+  	</dependencies>
+  </dependencyManagement>
+  
+  <build>
+  <pluginManagement>
+  	<plugins>
+  		<plugin>
+  			<groupId>org.springframework.boot</groupId>
+  			<artifactId>spring-boot-maven-plugin</artifactId>
+  			<version>3.0.1</version>
+  			<configuration>
+      			<layers>
+          			<enabled>true</enabled>
+      			</layers>
+      			<excludes>
+          			<exclude>
+              			<groupId>org.projectlombok</groupId>
+              			<artifactId>lombok</artifactId>
+          			</exclude>
+      			</excludes>
+  			</configuration>
+  			<executions>
+      			<execution>
+          			<goals>
+              			<goal>build-info</goal>
+          			</goals>
+      			</execution>
+  			</executions>
+		</plugin>
+		<plugin>
+  			<groupId>org.apache.maven.plugins</groupId>
+  			<artifactId>maven-compiler-plugin</artifactId>
+  			<version>3.11.0</version>
+  			<configuration>
+      			<release>17</release>
+      			<parameters>true</parameters>
+  			</configuration>
+		</plugin>		
+  	</plugins>
+  </pluginManagement>
+  </build>
   
 </project>
