--- a/project/scrapper/pom.xml
+++ b/project/scrapper/pom.xml
@@ -6,4 +6,50 @@
     <version>0.0.1-SNAPSHOT</version>
   </parent>
   <artifactId>scrapper</artifactId>
+  
+    <dependencies>
+  	<dependency>
+    	<groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-validation</artifactId>
+  	</dependency>
+  	<dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
+    <dependency>
+  		<groupId>org.springframework.boot</groupId>
+  		<artifactId>spring-boot-devtools</artifactId>
+  		<scope>runtime</scope>
+  		<optional>true</optional>
+	</dependency>
+	<dependency>
+  		<groupId>org.springframework.boot</groupId>
+  		<artifactId>spring-boot-configuration-processor</artifactId>
+  		<optional>true</optional>
+	</dependency>
+	<dependency>
+  		<groupId>org.springframework</groupId>
+  		<artifactId>spring-context-indexer</artifactId>
+  		<optional>true</optional>
+	</dependency>
+	<dependency>
+  		<groupId>org.projectlombok</groupId>
+  		<artifactId>lombok</artifactId>
+  		<optional>true</optional>
+	</dependency>
+  	</dependencies>
+  
+  <build>
+  	<plugins>
+  		<plugin>
+  			<groupId>org.springframework.boot</groupId>
+  			<artifactId>spring-boot-maven-plugin</artifactId>
+		</plugin>
+		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+  			<artifactId>maven-compiler-plugin</artifactId>
+		</plugin>		
+  	</plugins>  	
+  </build>
+  
 </project>
