--- a/project/scrapper/src/main/resources/application.properties
+++ b/project/scrapper/src/main/resources/application.properties
@@ -3,3 +3,5 @@ springdoc.swagger-ui.enabled=true
 springdoc.swagger-ui.path=/swagger-ui/
 springdoc.swagger-ui.url=/v3/api-docs
 app.schedulerInterval=PT10S
+github.base-url=https://api.github.com
+stackoverflow.base-url=https://api.stackexchange.com
