задание 1 вроде рабочее

--- a/project/bot/pom.xml
+++ b/project/bot/pom.xml
@@ -9,9 +9,12 @@
   
   <dependencies>
   	<dependency>
+  		<groupId>org.telegram</groupId>
+  		<artifactId>telegrambots</artifactId>
+	</dependency>
+  	<dependency>
   		<groupId>com.github.pengrad</groupId>
   		<artifactId>java-telegram-bot-api</artifactId>
-  		<version>6.6.0</version>
 	</dependency>
 	<dependency>
     	<groupId>javax.servlet</groupId>
