--- a/project/pom.xml
+++ b/project/pom.xml
@@ -25,6 +25,16 @@
   <dependencyManagement>
   	<dependencies>
   		<dependency>
+  			<groupId>org.telegram</groupId>
+  			<artifactId>telegrambots</artifactId>
+  			<version>5.0.0</version>
+		</dependency>
+  		<dependency>
+  			<groupId>com.github.pengrad</groupId>
+  			<artifactId>java-telegram-bot-api</artifactId>
+  			<version>6.6.0</version>
+		</dependency>
+  		<dependency>
   			<groupId>org.springframework.cloud</groupId>
   			<artifactId>spring-cloud-dependencies</artifactId>
   			<version>2022.0.0</version>
