4 задание? не умное

--- a/project/link-parser/pom.xml
+++ b/project/link-parser/pom.xml
@@ -6,4 +6,52 @@
     <version>0.0.1-SNAPSHOT</version>
   </parent>
   <artifactId>link-parser</artifactId>
+  
+<dependencies>
+    <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter</artifactId>
+        <version>5.8.2</version>
+        <scope>test</scope>
+    </dependency>
+</dependencies>
+  
+  <build>
+  	<plugins>
+  		<plugin>
+  			<groupId>org.springframework.boot</groupId>
+  			<artifactId>spring-boot-maven-plugin</artifactId>
+		</plugin>
+		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+  			<artifactId>maven-compiler-plugin</artifactId>
+		</plugin>		
+		 <plugin>
+      		<groupId>org.apache.maven.plugins</groupId>
+      		<artifactId>maven-failsafe-plugin</artifactId>
+      		<version>2.22.2</version>
+      		<configuration>
+				<failIfNoTests>false</failIfNoTests>
+        		<includes>
+          			<include>**/*Test.java</include>
+          			<include>**/*IT.java</include>
+          			<include>**/*Spec.java</include>
+        		</includes>
+      		</configuration>
+      		<executions>
+        		<execution>
+          			<goals>
+            			<goal>integration-test</goal>
+            			<goal>verify</goal>
+          			</goals>
+        		</execution>
+      		</executions>
+    	</plugin> 
+		<plugin>
+    		<groupId>org.apache.maven.plugins</groupId>
+    		<artifactId>maven-surefire-plugin</artifactId>
+		</plugin>
+  	</plugins>  	
+  </build>
+  
 </project>
