--- a/project/pom.xml
+++ b/project/pom.xml
@@ -85,6 +85,14 @@
       			<release>17</release>
       			<parameters>true</parameters>
   			</configuration>
+		</plugin>
+		<plugin>
+    		<groupId>org.apache.maven.plugins</groupId>
+    		<artifactId>maven-failsafe-plugin</artifactId>
+		</plugin>
+		<plugin>
+    		<groupId>org.apache.maven.plugins</groupId>
+    		<artifactId>maven-surefire-plugin</artifactId>
 		</plugin>		
   	</plugins>
   </pluginManagement>
