--- a/project/scrapper/pom.xml
+++ b/project/scrapper/pom.xml
@@ -77,6 +77,14 @@
 		<plugin>
 			<groupId>org.apache.maven.plugins</groupId>
   			<artifactId>maven-compiler-plugin</artifactId>
+		</plugin>
+		<plugin>
+    		<groupId>org.apache.maven.plugins</groupId>
+    		<artifactId>maven-failsafe-plugin</artifactId>
+		</plugin>
+		<plugin>
+    		<groupId>org.apache.maven.plugins</groupId>
+    		<artifactId>maven-surefire-plugin</artifactId>
 		</plugin>		
   	</plugins>  	
   </build>
