--- a/project/pom.xml
+++ b/project/pom.xml
@@ -24,6 +24,13 @@
   
   <dependencyManagement>
   	<dependencies>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>testcontainers-bom</artifactId>
+            <version>1.17.6</version>
+            <type>pom</type>
+            <scope>import</scope>
+        </dependency>
   		<dependency>
   			<groupId>org.telegram</groupId>
   			<artifactId>telegrambots</artifactId>
