--- a/project/scrapper/pom.xml
+++ b/project/scrapper/pom.xml
@@ -8,6 +8,37 @@
   <artifactId>scrapper</artifactId>
   
   <dependencies>
+  	<!-- Database -->
+	<dependency>
+   		<groupId>org.springframework.boot</groupId>
+   		<artifactId>spring-boot-starter-jdbc</artifactId>
+	</dependency>
+	<dependency>
+   		<groupId>org.postgresql</groupId>
+   		<artifactId>postgresql</artifactId>
+   		<scope>runtime</scope>
+	</dependency>
+  	<dependency>
+   		<groupId>org.liquibase</groupId>
+   		<artifactId>liquibase-core</artifactId>
+   		<scope>test</scope>
+	</dependency>
+  	<dependency>
+        <groupId>org.testcontainers</groupId>
+        <artifactId>junit-jupiter</artifactId>
+        <scope>test</scope>
+    </dependency>
+    <dependency>
+        <groupId>org.testcontainers</groupId>
+        <artifactId>postgresql</artifactId>
+        <scope>test</scope>
+    </dependency>
+  	<dependency>
+        <groupId>org.testcontainers</groupId>
+        <artifactId>testcontainers-bom</artifactId>
+        <version>1.17.6</version>
+        <type>pom</type>
+    </dependency>
 	<dependency>
     	<groupId>javax.servlet</groupId>
     	<artifactId>javax.servlet-api</artifactId>
