--- a/project/scrapper/pom.xml
+++ b/project/scrapper/pom.xml
@@ -8,6 +8,11 @@
   <artifactId>scrapper</artifactId>
   
   <dependencies>
+  	<dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter</artifactId>
+        <scope>test</scope>
+    </dependency>
   	<!-- Database -->
 	<dependency>
    		<groupId>org.springframework.boot</groupId>
@@ -108,15 +113,33 @@
 		<plugin>
 			<groupId>org.apache.maven.plugins</groupId>
   			<artifactId>maven-compiler-plugin</artifactId>
-		</plugin>
-		<plugin>
-    		<groupId>org.apache.maven.plugins</groupId>
-    		<artifactId>maven-failsafe-plugin</artifactId>
-		</plugin>
-		<plugin>
-    		<groupId>org.apache.maven.plugins</groupId>
-    		<artifactId>maven-surefire-plugin</artifactId>
 		</plugin>		
+		 <plugin>
+      		<groupId>org.apache.maven.plugins</groupId>
+      		<artifactId>maven-failsafe-plugin</artifactId>
+      		<version>2.22.2</version>
+      		<configuration>
+				<failIfNoTests>false</failIfNoTests>
+        		<includes>
+          			<include>**/*Test.java</include>
+          			<include>**/*IT.java</include>
+          			<include>**/*Spec.java</include>
+        		</includes>
+      		</configuration>
+      		<executions>
+        		<execution>
+          			<goals>
+            			<goal>integration-test</goal>
+            			<goal>verify</goal>
+          			</goals>
+        		</execution>
+      		</executions>
+    	</plugin> 
+		<plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>3.0.0</version>
+        </plugin>
   	</plugins>  	
   </build>
   
