--- a/project/scrapper/src/main/resources/application.yml
+++ b/project/scrapper/src/main/resources/application.yml
@@ -1,17 +1,68 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5433/scrapper
-    username: polina
-    password: 123
+    url: jdbc:postgresql://postgresql:5432/scrapper
+    username: postgres
+    password: password
     driver-class-name: org.postgresql.Driver
+
+  rabbitmq:
+    host: rabbitmq
+    port: 5672
+
+  application:
+    name: scrapper
+
+  jpa:
+    hibernate:
+      ddl-auto: none
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+        show_sql: true
+        format_sql: true
+        use_sql_comments: true
 
   liquibase:
     enabled: false
+
+management:
+
+  info:
+    env:
+      enabled: true
+
+  server:
+    port: 8081
+
+  endpoints:
+    web:
+      base-path: '/'
+      path-mapping:
+        prometheus: 'metrics'
+      exposure:
+        include: [ 'info', 'health', 'prometheus' ]
+    enabled-by-default: true
+
+  endpoint:
+    health:
+      show-details: always
+
+  metrics:
+    tags:
+      application: ${spring.application.name}
 
 app:
   scheduler:
     interval: 15S
   link-update-age: 15S
+  database-access-type: jdbc
+  use-queue: true
+  rabbitmq:
+    exchange: link-update.exchange
+    queue: new-link-update.queue
+    key: new  # new updates go to new-... queue
+    dlx: link-update.dlx
 
 server:
   port: 8080
@@ -21,7 +72,6 @@ springdoc:
     enabled: true
     path: /swagger-ui
 
-
 github-client:
   base-url: https://api.github.com
   api-key: ${GITHUB_API_KEY}
@@ -30,4 +80,3 @@ github-client:
 stackoverflow-client:
   base-url: https://api.stackexchange.com/2.3
   api-key: ${STACKOVERFLOW_API_KEY}
-
