--- a/project/scrapper/src/main/resources/application.properties
+++ b/project/scrapper/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 app.test=12345
+app.base-url=http://localhost:8080
 springdoc.swagger-ui.enabled=true
 springdoc.swagger-ui.path=/swagger-ui/
 springdoc.swagger-ui.url=/v3/api-docs
